--- a/Client.Avalonia/Containers/StratumsListContainer/StratumsListContainer.axaml
+++ b/Client.Avalonia/Containers/StratumsListContainer/StratumsListContainer.axaml
@@ -3,6 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:objectsListContainer="clr-namespace:Client.Avalonia.Containers.StratumsListContainer"
+             xmlns:card="clr-namespace:Client.Avalonia.Controls.Card"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Client.Avalonia.Containers.StratumsListContainer.StratumsListContainer"
              x:DataType="objectsListContainer:StratumsListContainerViewModel">
@@ -11,62 +12,75 @@
         <objectsListContainer:StratumsListContainerViewModel />
     </Design.DataContext>
 
-    <Grid RowDefinitions="Auto *">
-        <DockPanel Grid.Row="0" Classes="ha-stretch">
-            <TextBlock DockPanel.Dock="Left"
-                       Classes="ha-left va-center"
-                       Text="{Binding StratumsList.Count}" />
-            <Button DockPanel.Dock="Right"
-                    Classes="ha-right"
-                    Content="+"
+    <card:Card Classes="m-3" MinWidth="300">
+        <Grid RowDefinitions="Auto *" Classes="m-2">
+            <Button Grid.Row="0"
+                    Classes="va-stretch ha-stretch hca-center"
+                    Content="Append"
                     Command="{Binding CreateStratumCommand}" />
-        </DockPanel>
-        <ScrollViewer Grid.Row="1">
-            <ItemsControl ItemsSource="{Binding StratumsList}">
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <Expander MinWidth="300">
-                            <Expander.Header>
-                                <TextBlock>
-                                    <Run Text="Объект с плотностью " /><Run Text="{Binding DensityLabel}" />
-                                </TextBlock>
-                            </Expander.Header>
-                            <DockPanel Classes="ha-stretch">
-                                <StackPanel Orientation="Vertical">
-                                    <StackPanel Orientation="Horizontal">
-                                        <TextBlock Text="Dimensions.Center.X" />
-                                        <TextBox Text="{Binding CenterX}" />
-                                    </StackPanel>
-                                    <StackPanel Orientation="Horizontal">
-                                        <TextBlock Text="Dimensions.Center.Y" />
-                                        <TextBox Text="{Binding CenterY}" />
-                                    </StackPanel>
-                                    <StackPanel Orientation="Horizontal">
-                                        <TextBlock Text="Dimensions.Center.Z" />
-                                        <TextBox Text="{Binding CenterZ}" />
-                                    </StackPanel>
-                                    <StackPanel Orientation="Horizontal">
-                                        <TextBlock Text="Density" />
-                                        <TextBox Text="{Binding Density}" />
-                                    </StackPanel>
-                                </StackPanel>
-                                <StackPanel DockPanel.Dock="Right"
-                                            Orientation="Vertical"
-                                            Classes="ha-right">
-                                    <!-- ReSharper disable once Xaml.PossibleNullReferenceException -->
-                                    <Button Content="Update"
-                                            Command="{Binding $parent[objectsListContainer:StratumsListContainer].((objectsListContainer:StratumsListContainerViewModel)DataContext).UpdateStratumCommand}"
-                                            CommandParameter="{Binding .}" />
-                                    <!-- ReSharper disable once Xaml.PossibleNullReferenceException -->
-                                    <Button Content="Remove"
-                                            Command="{Binding $parent[objectsListContainer:StratumsListContainer].((objectsListContainer:StratumsListContainerViewModel)DataContext).RemoveStratumCommand}"
-                                            CommandParameter="{Binding Id}" />
-                                </StackPanel>
-                            </DockPanel>
-                        </Expander>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
-        </ScrollViewer>
-    </Grid>
+            <ScrollViewer Grid.Row="1">
+                <ItemsControl ItemsSource="{Binding StratumsList}">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Expander Margin="0 6" Classes="ha-stretch">
+                                <Expander.Header>
+                                    <TextBlock Text="{Binding DensityLabel, StringFormat='Объект плотностью {0}'}" />
+                                </Expander.Header>
+                                <Grid Classes="ha-stretch" RowDefinitions="Auto Auto *">
+                                    <Grid Grid.Row="0" DockPanel.Dock="Bottom" ColumnDefinitions="* *" Classes="mb-1">
+                                        <!-- ReSharper disable once Xaml.PossibleNullReferenceException -->
+                                        <Button Grid.Column="0"
+                                                Classes="ha-stretch hca-center mr-1"
+                                                Content="Update"
+                                                Command="{Binding $parent[objectsListContainer:StratumsListContainer].((objectsListContainer:StratumsListContainerViewModel)DataContext).UpdateStratumCommand}"
+                                                CommandParameter="{Binding .}" />
+                                        <!-- ReSharper disable once Xaml.PossibleNullReferenceException -->
+                                        <Button Grid.Column="1"
+                                                Classes="ha-stretch hca-center ml-1"
+                                                Content="Remove"
+                                                Command="{Binding $parent[objectsListContainer:StratumsListContainer].((objectsListContainer:StratumsListContainerViewModel)DataContext).RemoveStratumCommand}"
+                                                CommandParameter="{Binding Id}" />
+                                    </Grid>
+                                    <Separator Grid.Row="1" Classes="my-1" />
+                                    <Grid Row="2" RowDefinitions="* * * * Auto *" ColumnDefinitions="* *"
+                                          Classes="mt-1">
+                                        <Grid ColumnDefinitions="* *" Grid.Row="0" Grid.Column="0" Classes="mb-2">
+                                            <TextBlock Classes="ha-left va-center" Grid.Column="0" Text="CenterX" />
+                                            <TextBox Grid.Column="1" Classes="va-center mx-1" Text="{Binding CenterX}" />
+                                        </Grid>
+                                        <Grid ColumnDefinitions="* *" Grid.Row="0" Grid.Column="1" Classes="mb-2">
+                                            <TextBlock Classes="ha-left va-center ml-1" Grid.Column="0" Text="StepX" />
+                                            <TextBox Grid.Column="1" Classes="va-center ml-1" Text="{Binding StepX}" />
+                                        </Grid>
+                                        <Grid ColumnDefinitions="* *" Grid.Row="1" Grid.Column="0" Classes="my-2">
+                                            <TextBlock Classes="ha-left va-center" Grid.Column="0" Text="CenterY" />
+                                            <TextBox Grid.Column="1" Classes="va-center mx-1" Text="{Binding CenterY}" />
+                                        </Grid>
+                                        <Grid ColumnDefinitions="* *" Grid.Row="1" Grid.Column="1" Classes="my-2">
+                                            <TextBlock Classes="ha-left va-center ml-1" Grid.Column="0" Text="StepY" />
+                                            <TextBox Grid.Column="1" Classes="va-center ml-1" Text="{Binding StepY}" />
+                                        </Grid>
+                                        <Grid ColumnDefinitions="* *" Grid.Row="2" Grid.Column="0" Classes="my-2">
+                                            <TextBlock Classes="ha-left va-center" Grid.Column="0" Text="CenterZ" />
+                                            <TextBox Grid.Column="1" Classes="va-center mx-1" Text="{Binding CenterZ}" />
+                                        </Grid>
+                                        <Grid ColumnDefinitions="* *" Grid.Row="2" Grid.Column="1" Classes="my-2">
+                                            <TextBlock Classes="ha-left va-center ml-1" Grid.Column="0" Text="StepZ" />
+                                            <TextBox Grid.Column="1" Classes="va-center ml-1" Text="{Binding StepZ}" />
+                                        </Grid>
+                                        <Separator Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Classes="mb-1" />
+                                        <Grid Row="4" Column="0" ColumnSpan="2"
+                                              ColumnDefinitions="* * * *" Classes="mt-1">
+                                            <TextBlock Classes="ha-left va-center" Grid.Column="0" Text="Density" />
+                                            <TextBox Grid.Column="1" Grid.ColumnSpan="3" Text="{Binding Density}" />
+                                        </Grid>
+                                    </Grid>
+                                </Grid>
+                            </Expander>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </ScrollViewer>
+        </Grid>
+    </card:Card>
 </UserControl>
