--- a/Client.Avalonia/Styles/CommonStyles.axaml
+++ b/Client.Avalonia/Styles/CommonStyles.axaml
@@ -64,7 +64,7 @@
     <Style Selector=":is(Control).mb-2">
         <Setter Property="Margin" Value="0 0 0 8" />
     </Style>
-    
+
     <Style Selector=":is(Control).mb-3">
         <Setter Property="Margin" Value="0 0 0 16" />
     </Style>
@@ -92,7 +92,7 @@
     <Style Selector=":is(Control).my-2">
         <Setter Property="Margin" Value="0 8" />
     </Style>
-    
+
     <Style Selector=":is(Control).my-3">
         <Setter Property="Margin" Value="0 16" />
     </Style>
@@ -113,14 +113,10 @@
         <Setter Property="Margin" Value="0 0 8 0" />
     </Style>
 
-    <Style Selector=":is(TextBlock).p-1">
-        <Setter Property="Padding" Value="4" />
-    </Style>
-    
     <Style Selector=":is(TextBlock).p-0">
         <Setter Property="Padding" Value="0" />
     </Style>
-    
+
     <Style Selector=":is(TextBlock).p-1">
         <Setter Property="Padding" Value="4" />
     </Style>
@@ -128,18 +124,26 @@
     <Style Selector=":is(TextBlock).p-2">
         <Setter Property="Padding" Value="8" />
     </Style>
-    
+
     <Style Selector=":is(TextBlock).p-3">
         <Setter Property="Padding" Value="16" />
     </Style>
-    
+
     <Style Selector=":is(TextBlock).align-center">
         <Setter Property="TextAlignment" Value="Center" />
     </Style>
     <Style Selector=":is(TextBlock).align-justify">
         <Setter Property="TextAlignment" Value="Justify" />
     </Style>
-    
+
+    <Style Selector=":is(TextBlock).text-center">
+        <Setter Property="TextAlignment" Value="Center" />
+    </Style>
+
+    <Style Selector=":is(TextBlock).text-wrap">
+        <Setter Property="TextWrapping" Value="Wrap" />
+    </Style>
+
     <Style Selector=":is(Button).hca-center">
         <Setter Property="HorizontalContentAlignment" Value="Center" />
     </Style>
