--- a/Client.Avalonia/Containers/PlotsContainer/PlotsContainer.axaml
+++ b/Client.Avalonia/Containers/PlotsContainer/PlotsContainer.axaml
@@ -3,14 +3,17 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:card="clr-namespace:Client.Avalonia.Controls.Card"
-             xmlns:plotCanvas="clr-namespace:Client.Avalonia.Controls.PlotCanvas"
              xmlns:plotsContainer="clr-namespace:Client.Avalonia.Containers.PlotsContainer"
+             xmlns:svg="clr-namespace:Avalonia.Svg;assembly=Avalonia.Svg"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Client.Avalonia.Containers.PlotsContainer.PlotsContainer"
              x:DataType="plotsContainer:PlotsContainerViewModel">
+    <Design.DataContext>
+        <!-- ReSharper disable once Xaml.ConstructorWarning -->
+        <plotsContainer:PlotsContainerViewModel />
+    </Design.DataContext>
+
     <card:Card>
-        <Grid >
-            <plotCanvas:PlotCanvas x:Name="Canvas" />
-        </Grid>
+        <Image Source="{Binding ChartImage}" Stretch="Uniform" />
     </card:Card>
 </UserControl>
