--- a/Client.Avalonia/Containers/PlotsContainer/PlotsContainer.axaml
+++ b/Client.Avalonia/Containers/PlotsContainer/PlotsContainer.axaml
@@ -14,6 +14,8 @@
     </Design.DataContext>
 
     <card:Card>
-        <Image Source="{Binding ChartImage}" Stretch="Uniform" />
+        <Viewbox>
+            <Image Source="{Binding ChartImage}" Stretch="Uniform" />
+        </Viewbox>
     </card:Card>
 </UserControl>
