--- a/Client.Avalonia/Windows/MainWindow/MainWindow.axaml
+++ b/Client.Avalonia/Windows/MainWindow/MainWindow.axaml
@@ -3,8 +3,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:Client.Avalonia.Windows.MainWindow"
-        xmlns:plotsContainer="clr-namespace:Client.Avalonia.Containers.PlotsContainer"
-        xmlns:areaSettingsContainer="clr-namespace:Client.Avalonia.Containers.AreaSettingsContainer"
+        xmlns:reactiveUi="http://reactiveui.net"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Client.Avalonia.Windows.MainWindow.MainWindow"
         x:DataType="vm:MainWindowViewModel"
@@ -12,18 +11,23 @@
         Title="Client.Avalonia">
 
     <Design.DataContext>
-        <!-- This only sets the DataContext for the previewer in an IDE,
-             to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
+        <!-- ReSharper disable once Xaml.ConstructorWarning -->
         <vm:MainWindowViewModel />
     </Design.DataContext>
 
-    <Grid Classes="ha-stretch" ColumnDefinitions="Auto *">
-        <areaSettingsContainer:AreaSettingsContainer Grid.Column="0"
-                                                     Margin="8 8 4 8"
-                                                     DataContext="{Binding AreaSettingsContainerViewModel}" />
-        <plotsContainer:PlotsContainer Grid.Column="1"
-                                       Margin="4 8 8 8"
-                                       DataContext="{Binding PlotsContainerViewModel}" />
+    <Grid RowDefinitions="* Auto">
+        <reactiveUi:RoutedViewHost Grid.Row="0" Router="{Binding Router}" PageTransition="{x:Null}" />
+
+        <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="15">
+            <StackPanel.Styles>
+                <Style Selector="StackPanel > :is(Control)">
+                    <Setter Property="Margin" Value="2" />
+                </Style>
+                <Style Selector="StackPanel > TextBlock">
+                    <Setter Property="VerticalAlignment" Value="Center" />
+                </Style>
+            </StackPanel.Styles>
+        </StackPanel>
     </Grid>
 
 </Window>
