--- a/Client.Avalonia/Containers/AreaSettingsContainer/ComputationalDomain/ComputationalDomainSettings.axaml
+++ b/Client.Avalonia/Containers/AreaSettingsContainer/ComputationalDomain/ComputationalDomainSettings.axaml
@@ -50,28 +50,27 @@
                          Text="{Binding ComputationalDomain.EndZ, Converter={StaticResource NumericValidationRule}, Mode=TwoWay}" />
             </Grid>
             <Separator Grid.Row="1" />
-            <Grid Grid.Row="2" RowDefinitions="* * * *" ColumnDefinitions="Auto * *" Classes="va-top m-2">
-                <TextBlock Grid.Row="0" Grid.Column="1"
-                           Classes="text-wrap text-center mb-1"
+            <Grid Grid.Row="2" RowDefinitions="* * * *" Classes="va-top m-2">
+                <TextBlock Grid.Row="0"
+                           Classes="text-wrap text-center mb-1 ha-center"
                            Text="{Binding SplittingParamsLabel}" />
-                <TextBlock Grid.Row="0" Grid.Column="2"
-                           Classes="text-wrap text-center mb-1"
-                           Text="{Binding MultyParamsLabel}" />
 
-                <TextBlock Grid.Row="1" Grid.Column="0" Classes="va-center" Text="OX:" />
-                <TextBox Grid.Row="1" Grid.Column="1"
-                         Classes="ha-stretch m-2"
-                         Text="{Binding ComputationalDomain.SplitsXCount, Converter={StaticResource NumericValidationRule}, Mode=TwoWay}" />
+                <Grid Row="1" RowDefinitions="* * *" ColumnDefinitions="Auto *">
+                    <TextBlock Grid.Row="0" Grid.Column="0" Classes="va-center" Text="OX:" />
+                    <TextBox Grid.Row="0" Grid.Column="1"
+                             Classes="ha-stretch m-2"
+                             Text="{Binding ComputationalDomain.SplitsXCount, Converter={StaticResource NumericValidationRule}, Mode=TwoWay}" />
 
-                <TextBlock Grid.Row="2" Grid.Column="0" Classes="va-center" Text="OY:" />
-                <TextBox Grid.Row="2" Grid.Column="1"
-                         Classes="ha-stretch m-2"
-                         Text="{Binding ComputationalDomain.SplitsYCount, Converter={StaticResource NumericValidationRule}, Mode=TwoWay}" />
+                    <TextBlock Grid.Row="1" Grid.Column="0" Classes="va-center" Text="OY:" />
+                    <TextBox Grid.Row="1" Grid.Column="1"
+                             Classes="ha-stretch m-2"
+                             Text="{Binding ComputationalDomain.SplitsYCount, Converter={StaticResource NumericValidationRule}, Mode=TwoWay}" />
 
-                <TextBlock Grid.Row="3" Grid.Column="0" Classes="va-center" Text="OZ:" />
-                <TextBox Grid.Row="3" Grid.Column="1"
-                         Classes="ha-stretch m-2"
-                         Text="{Binding ComputationalDomain.SplitsZCount, Converter={StaticResource NumericValidationRule}, Mode=TwoWay}" />
+                    <TextBlock Grid.Row="2" Grid.Column="0" Classes="va-center" Text="OZ:" />
+                    <TextBox Grid.Row="2" Grid.Column="1"
+                             Classes="ha-stretch m-2"
+                             Text="{Binding ComputationalDomain.SplitsZCount, Converter={StaticResource NumericValidationRule}, Mode=TwoWay}" />
+                </Grid>
             </Grid>
         </Grid>
     </Grid>
